openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cf-sample-app-nodejs
    app.kubernetes.io/component: cf-sample-app-nodejs
    app.kubernetes.io/instance: cf-sample-app-nodejs
  name: cf-sample-app-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: cf-sample-app-nodejs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: cf-sample-app-nodejs
    spec:
      containers:
        image: image-registry.openshift-image-registry.svc:5000/cf2ocp-sample-app-nodejs/cf-sample-app-nodejs:latest
        imagePullPolicy: Always
        name: cf-sample-app-nodejs
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests: 
            memory: "256Mi"
          limits:
            memory: "512Mi"
