openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cf-sample-app-nodejs
    app.kubernetes.io/component: cf-sample-app-nodejs
    app.kubernetes.io/instance: cf-sample-app-nodejs
  name: cf-sample-app-nodejs
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: cf-sample-app-nodejs
  sessionAffinity: None
  type: ClusterIP
