openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cf-sample-app-nodejs
    app.kubernetes.io/component: cf-sample-app-nodejs
    app.kubernetes.io/instance: cf-sample-app-nodejs
  name: cf-sample-app-nodejs
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cf-sample-app-nodejs
    weight: 100
  wildcardPolicy: None
